Style: fixed wrong paddings.

--- a/src/scss/pages/settings/_settings.scss
+++ b/src/scss/pages/settings/_settings.scss
@@ -6,8 +6,8 @@
   @include flex (column, flex-start, stretch);
   flex-wrap: wrap;
   @extend .sheet;
-  padding: 0 $padding-medium $padding-medium!important;
-  margin-top: $padding-medium;
+  padding: 0 $padding-medium $padding-medium !important;
+  margin-bottom: $padding-medium;
 
   .md-track-ticks {
     display: none;
